--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <nav id="desktop-nav">
+        <div class="logo">Kenneth</div>
+        <div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
     <h1>Hello World!</h1>
     <script src="script.js"></script>
 </body>
