--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo">Kenneth</div>
+        <div class="logo">Kenneth Luo</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -36,7 +36,15 @@
             </div>
         </div>
     </nav>
-    <h1>Hello World!</h1>
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="./assets/profile-modified.png" alt="My Profile">
+        </div>
+        <div class="section__text">
+            <p class="section__text_p1">Hello I'm</p>
+            <h1 class="title">Kenneth Luo</h1>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
