--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
         <div class="section__text">
             <p class="section__text_p1">Hello I'm</p>
             <h1 class="title">Kenneth Luo</h1>
+            <div class="btn-container">
+                <button
+                    class="btn btn-color-2"
+                    onclick="window.open('./assets/Resume_Kenneth.pdf')"
+                >
+                    Download CV
+                </button>
+            </div>
         </div>
     </section>
     <script src="script.js"></script>
