Added Linkedin button and Github button

--- a/index.html
+++ b/index.html
@@ -48,8 +48,20 @@
                     class="btn btn-color-2"
                     onclick="window.open('./assets/Resume_Kenneth.pdf')"
                 >
-                    Download CV
+                    Download Resume
                 </button>
+                <button
+                    class="btn btn-color-1"
+                    onclick="location.href='./#contact'"
+                >
+                    Contact Info
+                </button>
+            </div>
+            <div id="socials-container">
+                <img src="./assets/linkedin.png" alt="My Linkedin Profile" 
+                class="icon">
+                <img src="./assets/github.png" alt="My Github Profile" 
+                class="icon">
             </div>
         </div>
     </section>
